--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage:": "https://youngchild-cloud.github.io/musinsa_react/"
+  "homepage": "https://youngchild-cloud.github.io/musinsa_react/"
 }
